--- a/test-skin.html
+++ b/test-skin.html
@@ -1,15 +1,15 @@
 <html lang="de">
-  <head><title>FFMp3 - The Flash Live MP3 Player! - haXed/Skinned!</title></head>
+  <head><title>MusesRadioPlayer - The Flash Live MP3 Player! - haXed/Skinned!</title></head>
   <body bgcolor="#dddddd">
 
 URL: http://drs.dokkogroup.com.ar/971Live.mp3 - buffering: 5 seg - FALLBACK: http://drs.dokkogroup.com.ar/fm104.1.mp3
 <br/>
 	<object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
-      <param name="movie" value="ffmp3-config.swf" />
+      <param name="movie" value="muses-config.swf" />
       <param name="flashvars" value="jsevents=true&buffering=5&url=http://drs.dokkogroup.com.ar/971Live.mp3&fallback=http://drs.dokkogroup.com.ar/fm104.1.mp3&lang=fi&title=Radio Casbah&skin=testSkin.xml" />
       <param name="wmode" value="window" />
       <param name="scale" value="noscale" />
-      <embed src="ffmp3-config.swf" bgcolor="#FFFFFF" flashvars="jsevents=true&buffering=5&url=http://drs.dokkogroup.com.ar/971Live.mp3&fallback=http://drs.dokkogroup.com.ar/fm104.1.mp3&lang=fi&title=Radio Casbah&color=red&skin=testSkin.xml" scale="noscale" wmode="window" type="application/x-shockwave-flash"
+      <embed src="muses-config.swf" bgcolor="#FFFFFF" flashvars="jsevents=true&buffering=5&url=http://drs.dokkogroup.com.ar/971Live.mp3&fallback=http://drs.dokkogroup.com.ar/fm104.1.mp3&lang=fi&title=Radio Casbah&color=red&skin=testSkin.xml" scale="noscale" wmode="window" type="application/x-shockwave-flash"
 	     width="300"
 	     height="100" />
     </object>
@@ -19,49 +19,49 @@ URL: http://drs.dokkogroup.com.ar/971Live.mp3 - buffering: 5 seg - FALLBACK: htt
 http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg - buffering: default.
 <br/>
     
-<!-- BEGINS: AUTO-GENERATED FFMP3 CODE -->
+<!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
-<param name="movie" value="ffmp3-config.swf" />
+<param name="movie" value="muses-config.swf" />
 <param name="flashvars" value="url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=auto&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" />
 <param name="wmode" value="window" />
 <param name="scale" value="noscale" />
-<embed src="ffmp3-config.swf" flashvars="url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=auto&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
+<embed src="muses-config.swf" flashvars="url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=auto&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
 width="300" scale="noscale" height="100" 
 wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 </object>
-<!-- ENDS: AUTO-GENERATED FFMP3 CODE -->    
+<!-- ENDS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->    
 <br/>
 <br/>
 
 http://drs.dokkogroup.com.ar/fm104.1.ogg - buffering: default.
 <br/>
     
-<!-- BEGINS: AUTO-GENERATED FFMP3 CODE -->
+<!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
-<param name="movie" value="ffmp3-config.swf" />
+<param name="movie" value="muses-config.swf" />
 <param name="flashvars" value="introurl=http://area51.dokkogroup.com.ar/mataBoludos/sounds/FRANCHELLA.mp3&url=http://drs.dokkogroup.com.ar/fm104.1.ogg&fallback=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=en&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" />
 <param name="wmode" value="window" />
 <param name="scale" value="noscale" />
-<embed src="ffmp3-config.swf" flashvars="introurl=http://area51.dokkogroup.com.ar/mataBoludos/sounds/FRANCHELLA.mp3&url=http://drs.dokkogroup.com.ar/fm104.1.ogg&fallback=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=en&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
+<embed src="muses-config.swf" flashvars="introurl=http://area51.dokkogroup.com.ar/mataBoludos/sounds/FRANCHELLA.mp3&url=http://drs.dokkogroup.com.ar/fm104.1.ogg&fallback=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=en&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
 width="300" scale="noscale" height="100" 
 wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 </object>
-<!-- ENDS: AUTO-GENERATED FFMP3 CODE -->    
+<!-- ENDS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->    
 <br/>
 <br/>
 
 http://crp01.cienradios.com.ar/Nacional_64.mp3 - buffering: default.
 http://streams4.museter.com:8006/;
 <br/>
-<!-- BEGINS: AUTO-GENERATED FFMP3 CODE -->
+<!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <object id="instance3" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="300" height="130" bgcolor="#FFFFFF">
-<param name="movie" value="ffmp3-config.swf" />
-<param name="flashvars" value="url=http://streams4.museter.com:8006/;&querymetadata=icecast&interval=25&lang=en&jsevents=false&codec=mp3&volume=33&tracking=true&skin=testSkin.xml&title=dsaa&autoplay=true" />
+<param name="movie" value="muses-config.swf" />
+<param name="flashvars" value="url=http://streams4.museter.com:8006/;&querymetadata=icecast&interval=25&lang=en&jsevents=false&codec=mp3&volume=33&tracking=true&skin=testSkin.xml&title=dsaa&autoplay=false" />
 <param name="wmode" value="window" />
 <param name="scale" value="noscale" />
-<embed name="instance3" src="ffmp3-config.swf" flashvars="url=http://streams4.museter.com:8006/;&querymetadata=icecast&interval=25&jsevents=false&lang=en&codec=mp3&volume=33&tracking=true&skin=testSkin.xml&title=dsaa&autoplay=true" width="300" scale="noscale" height="130" wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
+<embed name="instance3" src="muses-config.swf" flashvars="url=http://streams4.museter.com:8006/;&querymetadata=icecast&interval=25&jsevents=false&lang=en&codec=mp3&volume=33&tracking=true&skin=testSkin.xml&title=dsaa&autoplay=false" width="300" scale="noscale" height="130" wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 </object>
-<!-- ENDS: AUTO-GENERATED FFMP3 CODE -->
+<!-- ENDS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <br/>
 <br/>
 <a href="javascript:instance3.playSound();">Play</a> 
@@ -73,20 +73,20 @@ http://streams4.museter.com:8006/;
 <a href="javascript:instance3.setFallbackUrl(prompt('FALLBACK URL: ','http://drs.dokkogroup.com.ar/971Live.mp3'));">Update FallbackUrl</a>
 <br/>
 
-<b>STATUS:</b> <span id="ffmp3status"></span><br/>
-<b>VOLUME:</b> <span id="ffmp3volume"></span><br/>
-<b>METADATA-JSON:</b> <span id="ffmp3metadatajson"></span><br/>
-<b>PARSED-METADATA:</b> <span id="ffmp3parsedmetadata"></span><br/>
-<b>LAST SOURCE:</b> <span id="ffmp3source"></span><br/>
-<b>IS FALLBACK:</b> <span id="ffmp3fallback"></span><br/>
-<b>INTRO-URL:</b> <span id="ffmp3introurl"></span><br />
+<b>STATUS:</b> <span id="musesStatus"></span><br/>
+<b>VOLUME:</b> <span id="musesvolume"></span><br/>
+<b>METADATA-JSON:</b> <span id="musesMetadatajson"></span><br/>
+<b>PARSED-METADATA:</b> <span id="musesParsedmetadata"></span><br/>
+<b>LAST SOURCE:</b> <span id="musesSource"></span><br/>
+<b>IS FALLBACK:</b> <span id="musesFallback"></span><br/>
+<b>INTRO-URL:</b> <span id="musesIntrourl"></span><br />
 <div id="buffering" style="display:none;">buffering... <img src="buffering.gif" /></div>
 
 <script type="text/javascript">
-	function ffmp3Callback(event,param){
+	function musesCallback(event,param){
 		switch(event){
 			case "volume":
-				document.getElementById('ffmp3volume').innerHTML=param;
+				document.getElementById('musesVolume').innerHTML=param;
 				break;
 			case "buffering":
 				document.getElementById('buffering').style.display="block";
@@ -95,28 +95,28 @@ http://streams4.museter.com:8006/;
 			case "stop":
 			case "ioError":
 			case "intro":
-				document.getElementById('ffmp3status').innerHTML=event;
+				document.getElementById('musesStatus').innerHTML=event;
 				document.getElementById('buffering').style.display="none";
 				break;
 			case "metadata-json":
-				document.getElementById('ffmp3metadatajson').innerHTML=param;
+				document.getElementById('musesMetadatajson').innerHTML=param;
 				eval("var metadata="+param+";");
 				// here you have the metadata object to play with.
 				break;
 			case "metadata":
-				document.getElementById('ffmp3parsedmetadata').innerHTML=param;
+				document.getElementById('musesParsedmetadata').innerHTML=param;
 				break;
 			case "source":
-				document.getElementById('ffmp3source').innerHTML=param;
+				document.getElementById('musesSource').innerHTML=param;
 				break;
 			case "fallback":
-				document.getElementById('ffmp3fallback').innerHTML=param;
+				document.getElementById('musesFallback').innerHTML=param;
 				break;
 			case "intro-url":
-				document.getElementById('ffmp3introurl').innerHTML=param;
+				document.getElementById('musesIntrourl').innerHTML=param;
 				break;
 			default:
-				alert("FFMP3: "+event+" - "+param);
+				alert("MusesRadioPlayer: "+event+" - "+param);
 				break;
 		}
 	}
