--- a/test-tiny.html
+++ b/test-tiny.html
@@ -1,14 +1,14 @@
 <html>
-  <head><title>FFMp3 - The Flash Live MP3 Player! - haXed</title></head>
+  <head><title>MusesRadioPlayer - The Flash Live MP3 Player! - haXed</title></head>
   <body bgcolor="#dddddd">
 	
 	<object width="130"
 	    height="60">
-      <param name="movie" value="ffmp3-tiny.swf" />
+      <param name="movie" value="muses-tiny.swf" />
       <param name="flashvars" value="url=http://87.117.193.142:9728/;&lang=sp&title=Radio Casbah" />
       <param name="wmode" value="window" />
       <param name="scale" value="noscale" />
-      <embed src="ffmp3-tiny.swf" flashvars="url=http://87.117.193.142:9728/;&lang=sp&title=Radio Casbah&color=red"
+      <embed src="muses-tiny.swf" flashvars="url=http://87.117.193.142:9728/;&lang=sp&title=Radio Casbah&color=red"
 	     width="130"
 	     height="60"
 	     scale="noscale"
@@ -19,11 +19,11 @@
     <br /><br />
 	<object width="130"
 	    height="60">
-      <param name="movie" value="ffmp3-tiny.swf" />
+      <param name="movie" value="muses-tiny.swf" />
       <param name="flashvars" value="url=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=sp&title=OGG" />
       <param name="wmode" value="window" />
       <param name="scale" value="noscale" />
-      <embed src="ffmp3-tiny.swf" flashvars="url=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=sp&title=OGG&codec=ogg&volume=25&welcome=Welcome to..."
+      <embed src="muses-tiny.swf" flashvars="url=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=sp&title=OGG&codec=ogg&volume=25&welcome=Welcome to..."
 	     width="130"
 	     height="60"
 	     scale="noscale"
