--- a/test-skin.html
+++ b/test-skin.html
@@ -5,11 +5,11 @@
 URL: http://drs.dokkogroup.com.ar/971Live.mp3 - buffering: 5 seg - FALLBACK: http://drs.dokkogroup.com.ar/fm104.1.mp3
 <br/>
 	<object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
-      <param name="movie" value="muses-config.swf" />
+      <param name="movie" value="muses.swf" />
       <param name="flashvars" value="jsevents=true&buffering=5&url=http://drs.dokkogroup.com.ar/971Live.mp3&fallback=http://drs.dokkogroup.com.ar/fm104.1.mp3&lang=fi&title=Radio Casbah&skin=testSkin.xml" />
       <param name="wmode" value="window" />
       <param name="scale" value="noscale" />
-      <embed src="muses-config.swf" bgcolor="#FFFFFF" flashvars="jsevents=true&buffering=5&url=http://drs.dokkogroup.com.ar/971Live.mp3&fallback=http://drs.dokkogroup.com.ar/fm104.1.mp3&lang=fi&title=Radio Casbah&color=red&skin=testSkin.xml" scale="noscale" wmode="window" type="application/x-shockwave-flash"
+      <embed src="muses.swf" bgcolor="#FFFFFF" flashvars="jsevents=true&buffering=5&url=http://drs.dokkogroup.com.ar/971Live.mp3&fallback=http://drs.dokkogroup.com.ar/fm104.1.mp3&lang=fi&title=Radio Casbah&color=red&skin=testSkin.xml" scale="noscale" wmode="window" type="application/x-shockwave-flash"
 	     width="300"
 	     height="100" />
     </object>
@@ -21,11 +21,11 @@ http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg - buffering: default.
     
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
-<param name="movie" value="muses-config.swf" />
-<param name="flashvars" value="url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=auto&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" />
+<param name="movie" value="muses.swf" />
+<param name="flashvars" value="autoplay=false&url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=auto&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" />
 <param name="wmode" value="window" />
 <param name="scale" value="noscale" />
-<embed src="muses-config.swf" flashvars="url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=auto&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
+<embed src="muses.swf" flashvars="autoplay=false&url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=auto&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
 width="300" scale="noscale" height="100" 
 wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 </object>
@@ -38,11 +38,11 @@ http://drs.dokkogroup.com.ar/fm104.1.ogg - buffering: default.
     
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
-<param name="movie" value="muses-config.swf" />
+<param name="movie" value="muses.swf" />
 <param name="flashvars" value="introurl=http://area51.dokkogroup.com.ar/mataBoludos/sounds/FRANCHELLA.mp3&url=http://drs.dokkogroup.com.ar/fm104.1.ogg&fallback=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=en&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" />
 <param name="wmode" value="window" />
 <param name="scale" value="noscale" />
-<embed src="muses-config.swf" flashvars="introurl=http://area51.dokkogroup.com.ar/mataBoludos/sounds/FRANCHELLA.mp3&url=http://drs.dokkogroup.com.ar/fm104.1.ogg&fallback=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=en&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
+<embed src="muses.swf" flashvars="introurl=http://area51.dokkogroup.com.ar/mataBoludos/sounds/FRANCHELLA.mp3&url=http://drs.dokkogroup.com.ar/fm104.1.ogg&fallback=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=en&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
 width="300" scale="noscale" height="100" 
 wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 </object>
@@ -50,16 +50,16 @@ wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 <br/>
 <br/>
 
-http://crp01.cienradios.com.ar/Nacional_64.mp3 - buffering: default.
-http://streams4.museter.com:8006/;
+http://95.211.82.139:8012/; - buffering: default.
+
 <br/>
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <object id="instance3" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="300" height="130" bgcolor="#FFFFFF">
-<param name="movie" value="muses-config.swf" />
-<param name="flashvars" value="url=http://streams4.museter.com:8006/;&querymetadata=icecast&interval=25&lang=en&jsevents=false&codec=mp3&volume=33&tracking=true&skin=testSkin.xml&title=dsaa&autoplay=false" />
+<param name="movie" value="muses.swf" />
+<param name="flashvars" value="reconnecttime=1800&url=http://95.211.82.139:8012/;&querymetadata=shoutcast&interval=25&metadataproxy=http://brandtrack.fm/proxy/proxy.php&lang=en&jsevents=false&codec=mp3&volume=33&tracking=true&skin=testSkinToggle.xml&title=dsaa&autoplay=false" />
 <param name="wmode" value="window" />
 <param name="scale" value="noscale" />
-<embed name="instance3" src="muses-config.swf" flashvars="url=http://streams4.museter.com:8006/;&querymetadata=icecast&interval=25&jsevents=false&lang=en&codec=mp3&volume=33&tracking=true&skin=testSkin.xml&title=dsaa&autoplay=false" width="300" scale="noscale" height="130" wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
+<embed name="instance3" src="muses.swf" flashvars="reconnecttime=1800&url=http://95.211.82.139:8012/;&querymetadata=shoutcast&interval=25&metadataproxy=http://brandtrack.fm/proxy/proxy.php&jsevents=false&lang=en&codec=mp3&volume=33&tracking=true&skin=testSkinToggle.xml&title=dsaa&autoplay=false" width="300" scale="noscale" height="130" wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 </object>
 <!-- ENDS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <br/>
