--- a/test-tiny.html
+++ b/test-tiny.html
@@ -4,11 +4,11 @@
 	
 	<object width="130"
 	    height="60">
-      <param name="movie" value="muses-tiny.swf" />
-      <param name="flashvars" value="url=http://87.117.193.142:9728/;&lang=sp&title=Radio Casbah" />
+      <param name="movie" value="muses.swf" />
+      <param name="flashvars" value="url=http://87.117.193.142:9728/;&lang=sp&title=Radio Casbah&skin=tiny" />
       <param name="wmode" value="window" />
       <param name="scale" value="noscale" />
-      <embed src="muses-tiny.swf" flashvars="url=http://87.117.193.142:9728/;&lang=sp&title=Radio Casbah&color=red"
+      <embed src="muses.swf" flashvars="url=http://87.117.193.142:9728/;&lang=sp&title=Radio Casbah&color=red&skin=tiny"
 	     width="130"
 	     height="60"
 	     scale="noscale"
@@ -19,11 +19,11 @@
     <br /><br />
 	<object width="130"
 	    height="60">
-      <param name="movie" value="muses-tiny.swf" />
-      <param name="flashvars" value="url=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=sp&title=OGG" />
+      <param name="movie" value="muses.swf" />
+      <param name="flashvars" value="url=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=sp&title=OGG&skin=tiny" />
       <param name="wmode" value="window" />
       <param name="scale" value="noscale" />
-      <embed src="muses-tiny.swf" flashvars="url=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=sp&title=OGG&codec=ogg&volume=25&welcome=Welcome to..."
+      <embed src="muses.swf" flashvars="url=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=sp&title=OGG&codec=ogg&volume=25&welcome=Welcome to...&skin=tiny"
 	     width="130"
 	     height="60"
 	     scale="noscale"
