* Fixed memory leak on OGG Streamings. * Added Labels to Flash Buttons to help blind or print-impaired users, some of whom use Screen Reader software (like JAWS).

--- a/test-skin.html
+++ b/test-skin.html
@@ -33,16 +33,16 @@ wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 <br/>
 <br/>
 
-http://drs.dokkogroup.com.ar/fm104.1.ogg - buffering: default.
+http://drs.dokkogroup.com.ar/RadioH-VIVO.mp3 - buffering: default. - Intro sample
 <br/>
     
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
 <param name="movie" value="muses.swf" />
-<param name="flashvars" value="introurl=http://area51.dokkogroup.com.ar/mataBoludos/sounds/FRANCHELLA.mp3&url=http://drs.dokkogroup.com.ar/fm104.1.ogg&fallback=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=en&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" />
+<param name="flashvars" value="introurl=http://area51.dokkogroup.com.ar/mataBoludos/sounds/FRANCHELLA.mp3&url=http://drs.dokkogroup.com.ar/RadioH-VIVO.mp3&fallback=http://drs.dokkogroup.com.ar/RadioH-VIVO.mp3&lang=en&codec=mp3&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" />
 <param name="wmode" value="window" />
 <param name="scale" value="noscale" />
-<embed src="muses.swf" flashvars="introurl=http://area51.dokkogroup.com.ar/mataBoludos/sounds/FRANCHELLA.mp3&url=http://drs.dokkogroup.com.ar/fm104.1.ogg&fallback=http://drs.dokkogroup.com.ar/fm104.1.ogg&lang=en&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
+<embed src="muses.swf" flashvars="introurl=http://area51.dokkogroup.com.ar/mataBoludos/sounds/FRANCHELLA.mp3&url=http://drs.dokkogroup.com.ar/RadioH-VIVO.mp3&fallback=http://drs.dokkogroup.com.ar/RadioH-VIVO.mp3&lang=en&codec=mp3&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
 width="300" scale="noscale" height="100" 
 wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 </object>
