* Ported to Haxe3 * Adjusted OGG Player so it does not need to reload every 30 minutes (same in AAC).   (So now the only codec forcing a reconnection from time to time is MP3). * Added codec information to the tracking system (helps us to better choose next steps). * Added Armenian Translation (thx. to Տեր-Գր.) * Added Tatar Translation (thx. to Arslangali)

--- a/test-skin.html
+++ b/test-skin.html
@@ -2,14 +2,14 @@
   <head><title>MusesRadioPlayer - The Flash Live MP3 Player! - haXed/Skinned!</title></head>
   <body bgcolor="#dddddd">
 
-URL: http://drs.dokkogroup.com.ar/971Live.mp3 - buffering: 5 seg - FALLBACK: http://drs.dokkogroup.com.ar/fm104.1.mp3
+URL: http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC
 <br/>
 	<object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
       <param name="movie" value="muses.swf" />
-      <param name="flashvars" value="jsevents=true&buffering=5&url=http://drs.dokkogroup.com.ar/971Live.mp3&fallback=http://drs.dokkogroup.com.ar/fm104.1.mp3&lang=fi&title=Radio Casbah&skin=testSkin.xml" />
+      <param name="flashvars" value="codec=aac&jsevents=true&buffering=5&url=http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC&lang=fi&title=Radio Casbah&skin=testSkin.xml" />
       <param name="wmode" value="window" />
       <param name="scale" value="noscale" />
-      <embed src="muses.swf" bgcolor="#FFFFFF" flashvars="jsevents=true&buffering=5&url=http://drs.dokkogroup.com.ar/971Live.mp3&fallback=http://drs.dokkogroup.com.ar/fm104.1.mp3&lang=fi&title=Radio Casbah&color=red&skin=testSkin.xml" scale="noscale" wmode="window" type="application/x-shockwave-flash"
+      <embed src="muses.swf" bgcolor="#FFFFFF" flashvars="codec=aac&jsevents=true&buffering=5&url=http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC&lang=fi&title=Radio Casbah&color=red&skin=testSkin.xml" scale="noscale" wmode="window" type="application/x-shockwave-flash"
 	     width="300"
 	     height="100" />
     </object>
