Fixed bug on Metadata-Json event (json object was not valid).

--- a/test-skin.html
+++ b/test-skin.html
@@ -6,10 +6,10 @@ URL: http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC
 <br/>
 	<object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
       <param name="movie" value="muses.swf" />
-      <param name="flashvars" value="codec=aac&jsevents=true&buffering=5&url=http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC&lang=fi&title=Radio Casbah&skin=testSkin.xml" />
+      <param name="flashvars" value="codec=aac&jsevents=true&buffering=5&url=http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC&lang=zh&title=Radio Casbah&skin=testSkin.xml" />
       <param name="wmode" value="window" />
       <param name="scale" value="noscale" />
-      <embed src="muses.swf" bgcolor="#FFFFFF" flashvars="codec=aac&jsevents=true&buffering=5&url=http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC&lang=fi&title=Radio Casbah&color=red&skin=testSkin.xml" scale="noscale" wmode="window" type="application/x-shockwave-flash"
+      <embed src="muses.swf" bgcolor="#FFFFFF" flashvars="codec=aac&jsevents=true&buffering=5&url=http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC&lang=zh&title=Radio Casbah&color=red&skin=testSkin.xml" scale="noscale" wmode="window" type="application/x-shockwave-flash"
 	     width="300"
 	     height="100" />
     </object>
@@ -22,10 +22,10 @@ http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg - buffering: default.
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
 <param name="movie" value="muses.swf" />
-<param name="flashvars" value="autoplay=false&url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=auto&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" />
+<param name="flashvars" value="autoplay=false&url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=cs&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" />
 <param name="wmode" value="window" />
 <param name="scale" value="noscale" />
-<embed src="muses.swf" flashvars="autoplay=false&url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=auto&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
+<embed src="muses.swf" flashvars="autoplay=false&url=http://drs.dokkogroup.com.ar/TandilRadio-95.7.ogg&lang=cs&codec=ogg&jsevents=true&volume=33&tracking=true&skin=testSkin.xml&title=dsa" 
 width="300" scale="noscale" height="100" 
 wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 </object>
@@ -100,7 +100,7 @@ http://95.211.82.139:8012/; - buffering: default.
 				break;
 			case "metadata-json":
 				document.getElementById('musesMetadatajson').innerHTML=param;
-				eval("var metadata="+param+";");
+				// var metadata=JSON.parse(param);
 				// here you have the metadata object to play with.
 				break;
 			case "metadata":
