* Added metadata support for Shoutcast V2 (using 7.html) * Adjusted OGG and AAC decoders so it does not need to reload every 30 minutes. * Added Hebrew Translation (thx. to Dan) * Added default text align to each translation (to allow right aligned languages). * Added automatic typography testing (to discard fonts that are not compatible with the selected language). * Fixed OGG progress-check detection (now we check audio progress instead of bytes downloaded). * Add SSL Certificate to Muses.org servers (now the hosted version of the player works over HTTPS). * Automatic protocol detection (HTTP or HTTPS) on hosted version. * Added HTML5 support for the hosted version of the player (for mobile devices) [beta]. * Make the player compatible with Facebook (to allow player the integration inside Facebook).

--- a/test-skin.html
+++ b/test-skin.html
@@ -4,12 +4,15 @@
 
 URL: http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC
 <br/>
+<strong>AllowScriptAccess=never</strong>
+<br/>
 	<object width="300" height="100" bgcolor="#FFFFFF" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
       <param name="movie" value="muses.swf" />
-      <param name="flashvars" value="codec=aac&jsevents=true&buffering=5&url=http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC&lang=zh&title=Radio Casbah&skin=testSkin.xml" />
+      <param name="flashvars" value="codec=aac&jsevents=true&buffering=5&url=http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC&lang=he&title=Radio Casbah&skin=testSkin.xml" />
       <param name="wmode" value="window" />
+      <param allowScriptAccess="never" />
       <param name="scale" value="noscale" />
-      <embed src="muses.swf" bgcolor="#FFFFFF" flashvars="codec=aac&jsevents=true&buffering=5&url=http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC&lang=zh&title=Radio Casbah&color=red&skin=testSkin.xml" scale="noscale" wmode="window" type="application/x-shockwave-flash"
+      <embed allowScriptAccess="never" src="muses.swf" bgcolor="#FFFFFF" flashvars="codec=aac&jsevents=true&buffering=5&url=http://4083.live.streamtheworld.com:80/DUBAI_92AAC_SC&lang=he&title=Radio Casbah&color=red&skin=testSkin.xml" scale="noscale" wmode="window" type="application/x-shockwave-flash"
 	     width="300"
 	     height="100" />
     </object>
@@ -50,16 +53,16 @@ wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 <br/>
 <br/>
 
-http://95.211.82.139:8012/; - buffering: default.
+http://54.84.130.147:8190/; - buffering: default.
 
 <br/>
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <object id="instance3" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="300" height="130" bgcolor="#FFFFFF">
 <param name="movie" value="muses.swf" />
-<param name="flashvars" value="reconnecttime=1800&url=http://95.211.82.139:8012/;&querymetadata=shoutcast&interval=25&metadataproxy=http://brandtrack.fm/proxy/proxy.php&lang=en&jsevents=false&codec=mp3&volume=33&tracking=true&skin=testSkinToggle.xml&title=dsaa&autoplay=false" />
+<param name="flashvars" value="reconnecttime=1800&url=http://54.84.130.147:8190/;&querymetadata=shoutcast&interval=25&lang=en&jsevents=false&codec=aac&volume=33&tracking=true&skin=testSkinToggle.xml&title=dsaa&autoplay=false" />
 <param name="wmode" value="window" />
 <param name="scale" value="noscale" />
-<embed name="instance3" src="muses.swf" flashvars="reconnecttime=1800&url=http://95.211.82.139:8012/;&querymetadata=shoutcast&interval=25&metadataproxy=http://brandtrack.fm/proxy/proxy.php&jsevents=false&lang=en&codec=mp3&volume=33&tracking=true&skin=testSkinToggle.xml&title=dsaa&autoplay=false" width="300" scale="noscale" height="130" wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
+<embed name="instance3" src="muses.swf" flashvars="reconnecttime=1800&url=http://54.84.130.147:8190/;&querymetadata=shoutcast&interval=25&jsevents=false&lang=en&codec=aac&volume=33&tracking=true&skin=testSkinToggle.xml&title=dsaa&autoplay=false" width="300" scale="noscale" height="130" wmode="window" bgcolor="#FFFFFF" type="application/x-shockwave-flash" />
 </object>
 <!-- ENDS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <br/>
